# src/routes/index.ts
@@ -2,14 +2,13 @@ import { createRouter } from '@/utils';
 import home from './api/v1/home';
 import orders from './api/v1/orders';
 import rooms from './api/v1/rooms';
+import upload from './api/v1/upload';
 import user from './api/v1/user';
 import verify from './api/v1/verify';
 import healthCheck from './healthCheck';
 import swagger from './swagger';
 
 const routes = createRouter();
-
-routes.use(healthCheck);
 
 routes.use(swagger);
 
@@ -22,5 +21,9 @@ routes.use('/api/v1/home', home);
 routes.use('/api/v1/rooms', rooms);
 
 routes.use('/api/v1/orders', orders);
+
+routes.use('/api/v1/upload', upload);
+
+routes.use(healthCheck);
 
 export default routes;
